修改了一些内容

--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>用户登录</title>
+    <title>用户注册</title>
     <script src="{{static_url('js/jquery-1.11.1.min.js')}}"></script>
 </head>
 <body>
@@ -10,7 +10,7 @@
         用户名: <input type="text" id="ChrName" value=""/><br/>
         密码: <input type="text" id="ChrPwd" value=""/><br/>
     </form>
-    <input type='button' value='登录' onclick="login()" id="loginbut"/>
+    <input type='button' value='注册' onclick="login()" id="loginbut"/>
 </body>
     <script>
         function login(){
